Fix menu overflow x when it becomes horizontal

--- a/src/style-guide.less
+++ b/src/style-guide.less
@@ -1576,6 +1576,7 @@ p{
 
   .is-menu{
     .clearfix();
+    overflow-x: auto;
 
     ul{
       padding-left: 0;
@@ -3287,7 +3288,6 @@ md-menu-item{
   }
 }
 
-
 /* Screen size ratio display */
 .ratio{
   display:flex;
@@ -3350,7 +3350,6 @@ md-menu-item{
     }
   }
 }
-
 
 /* Date / time formatting */
 .week-days{
